--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
 	"dependencies": {
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.0.2"
+		"react-router-dom": "^6.0.2",
+		"vite": "^4.0.0",
+		"@vitejs/plugin-react": "^3.0.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.26",
-		"@types/react-dom": "^18.0.9",
-		"@vitejs/plugin-react": "^3.0.0",
-		"vite": "^4.0.0"
+		"@types/react-dom": "^18.0.9"
 	}
 }
