--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
-	"name": "bitcoin-tracker",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
+	"name": "bitcoin-tracking",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
 	"scripts": {
-		"dev": "vite",
-		"start": "vite",
-		"build": "vite build",
-		"preview": "vite preview"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node index.js"
 	},
-	"engines": {
-		"node": "16.17.1",
-		"npm": "8.15.0"
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/virtanen-ville/bitcoin-tracking.git"
 	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/virtanen-ville/bitcoin-tracking/issues"
+	},
+	"homepage": "https://github.com/virtanen-ville/bitcoin-tracking#readme",
 	"dependencies": {
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.0.2",
-		"vite": "^4.0.0",
-		"@vitejs/plugin-react": "^3.0.0"
-	},
-	"devDependencies": {
-		"@types/react": "^18.0.26",
-		"@types/react-dom": "^18.0.9"
+		"express": "^4.18.2"
 	}
 }
